forgotten yaml fix

--- a/Resources/Prototypes/Entities/Mobs/Species/slime.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/slime.yml
@@ -160,7 +160,7 @@
   #ss220 emote 5 sec end
   #SS220 LimitationRevive - start
   - type: LimitationRevive
-    maxRevive: 100 #has no death limit
+    reviveLimit: 100 #has no death limit
   #SS220 LimitationRevive - end
 
 - type: entity
