--- a/Resources/Prototypes/SS220/Entities/Mobs/Species/tajaran.yml
+++ b/Resources/Prototypes/SS220/Entities/Mobs/Species/tajaran.yml
@@ -112,7 +112,7 @@
     - id: Galactic
     - id: Siiktajr
   - type: LimitationRevive
-    maxRevive: 3
+    reviveLimit: 3
 
 - type: entity
   id: MobTajaranDummy
