--- a/Resources/Prototypes/SS220/Shitspawn/FractWarEbent/ert/jobs_ERT.yml
+++ b/Resources/Prototypes/SS220/Shitspawn/FractWarEbent/ert/jobs_ERT.yml
@@ -173,8 +173,8 @@
     - type: DefibrillatorSkill
       chanceWithMedSkill: 1
     - type: LimitationRevive
-      maxRevive: 3
-      delayBeforeDamage: 180
+      reviveLimit: 3
+      beforeDamageDelay: 180
     - type: RandomHumanoidAppearance
       randomizeName: false
 
@@ -236,8 +236,8 @@
     - type: DefibrillatorSkill
       chanceWithMedSkill: 1
     - type: LimitationRevive
-      maxRevive: 3
-      delayBeforeDamage: 180
+      reviveLimit: 3
+      beforeDamageDelay: 180
     - type: RandomHumanoidAppearance
       randomizeName: false
 
@@ -304,8 +304,8 @@
     - type: DefibrillatorSkill
       chanceWithMedSkill: 1
     - type: LimitationRevive
-      maxRevive: 3
-      delayBeforeDamage: 180
+      reviveLimit: 3
+      beforeDamageDelay: 180
     - type: RandomHumanoidAppearance
       randomizeName: false
 
@@ -369,8 +369,8 @@
     - type: DefibrillatorSkill
       chanceWithMedSkill: 1
     - type: LimitationRevive
-      maxRevive: 3
-      delayBeforeDamage: 180
+      reviveLimit: 3
+      beforeDamageDelay: 180
 
 - type: job
   id: SpecOpsCMO
@@ -436,8 +436,8 @@
     - type: DefibrillatorSkill
       chanceWithMedSkill: 1
     - type: LimitationRevive
-      maxRevive: 3
-      delayBeforeDamage: 180
+      reviveLimit: 3
+      beforeDamageDelay: 180
 
 - type: job
   id: SpecOpsFighter
