--- a/Resources/Prototypes/SS220/Shitspawn/FractWarEbent/ussp/jobs_sssp.yml
+++ b/Resources/Prototypes/SS220/Shitspawn/FractWarEbent/ussp/jobs_sssp.yml
@@ -70,8 +70,8 @@
     - type: DefibrillatorSkill
       chanceWithMedSkill: 1
     - type: LimitationRevive
-      maxRevive: 3
-      delayBeforeDamage: 180
+      reviveLimit: 3
+      beforeDamageDelay: 180
 
 - type: job
   id: USSPLeader
@@ -163,8 +163,8 @@
     - type: DefibrillatorSkill
       chanceWithMedSkill: 1
     - type: LimitationRevive
-      maxRevive: 3
-      delayBeforeDamage: 180
+      reviveLimit: 3
+      beforeDamageDelay: 180
 
 - type: job
   id: USSPEngineer
@@ -256,8 +256,8 @@
     - type: DefibrillatorSkill
       chanceWithMedSkill: 1
     - type: LimitationRevive
-      maxRevive: 3
-      delayBeforeDamage: 180
+      reviveLimit: 3
+      beforeDamageDelay: 180
 
 - type: job
   id: USSPCorpsman
@@ -348,8 +348,8 @@
     - type: DefibrillatorSkill
       chanceWithMedSkill: 1
     - type: LimitationRevive
-      maxRevive: 3
-      delayBeforeDamage: 180
+      reviveLimit: 3
+      beforeDamageDelay: 180
 
 - type: job
   id: USSPCMO
@@ -434,8 +434,8 @@
     - type: DefibrillatorSkill
       chanceWithMedSkill: 1
     - type: LimitationRevive
-      maxRevive: 3
-      delayBeforeDamage: 180
+      reviveLimit: 3
+      beforeDamageDelay: 180
 
 - type: job
   id: USSPFighter
