another yaml fix

--- a/Resources/Prototypes/SS220/Shitspawn/FractWarEbent/iron/jobs_IronSquad.yml
+++ b/Resources/Prototypes/SS220/Shitspawn/FractWarEbent/iron/jobs_IronSquad.yml
@@ -537,7 +537,7 @@
       chanceWithMedSkill: 1
     - type: LimitationRevive
       reviveLimit: 3
-      delayBeforeDamage: 180
+      beforeDamageDelay: 180
 
 - type: job
   id: IronSquadFighter
