око бехолдера фикс

--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
@@ -809,6 +809,7 @@
     - state: base
       map: ["enum.GunVisualLayers.Base"]
   - type: Gun
+    canSuicide: false #SS220-new-feature kus
     fireRate: 1
     soundGunshot:
       path: /Audio/Weapons/Guns/Gunshots/laser_clown.ogg
