ADD: JudgeGavel to magistrate locker

--- a/Resources/Prototypes/SS220/Catalog/Fills/Lockers/law.yml
+++ b/Resources/Prototypes/SS220/Catalog/Fills/Lockers/law.yml
@@ -14,6 +14,7 @@
     - id: Telescopichka
     - id: BoxEncryptionKeyLaw
     - id: BoxTapeRecorder
+    - id: JudgeGavel
 
 - type: entity
   id: LockerMagistrateFilled
