--- a/Resources/Prototypes/Entities/Clothing/Head/hardsuit-helmets.yml
+++ b/Resources/Prototypes/Entities/Clothing/Head/hardsuit-helmets.yml
@@ -337,9 +337,9 @@
   - type: PointLight
     color: "#daffad"
     radius: 6
-  - type: PressureProtection
-    highPressureMultiplier: 0.72 # До-апстримное значение 3d1dab262bd4bc1a8291c1e99c568805ee3c124d
 #SS220-Chief-Helmet-FIX-End
+  - type: PressureProtection
+    highPressureMultiplier: 0.08
     lowPressureMultiplier: 1000
   - type: Armor
     modifiers:
