--- a/Resources/Prototypes/SS220/Entities/Objects/Consumable/Food/caramel_rooster.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Consumable/Food/caramel_rooster.yml
@@ -30,9 +30,13 @@
     sprite: SS220/Objects/Consumable/Food/caramel_rooster.rsi
     inhandVisuals:
       left:
-      - state: inhand-leftg
+      - state: inhand-left-green
       right:
-      - state: inhand-rightg
+      - state: inhand-right-green
+  - type: FlavorProfile
+    flavors:
+    - sweet
+    - sour
 
 - type: entity
   name: red caramel rooster
@@ -43,31 +47,16 @@
   - type: Sprite
     sprite: SS220/Objects/Consumable/Food/caramel_rooster.rsi
     state: red_caramel_rooster
-  - type: SolutionContainerManager
-    solutions:
-      food:
-        maxVol: 10
-        reagents:
-        - ReagentId: Nutriment
-          Quantity: 8
-        - ReagentId: Vitamin
-          Quantity: 2
-  - type: MeleeWeapon
-    wideAnimationRotation: 0
-    damage:
-      types:
-        Blunt: 2
-    angle: 0
-    animation: WeaponArcThrust
-    soundHit:
-      path: /Audio/Weapons/punch1.ogg
   - type: Item
     sprite: SS220/Objects/Consumable/Food/caramel_rooster.rsi
     inhandVisuals:
       left:
-      - state: inhand-leftr
+      - state: inhand-left-red
       right:
-      - state: inhand-rightr
+      - state: inhand-right-red
+  - type: FlavorProfile
+    flavors:
+    - sweet
 
 - type: entity
   name: yellow caramel rooster
@@ -78,28 +67,14 @@
   - type: Sprite
     sprite: SS220/Objects/Consumable/Food/caramel_rooster.rsi
     state: yellow_caramel_rooster
-  - type: SolutionContainerManager
-    solutions:
-      food:
-        maxVol: 10
-        reagents:
-        - ReagentId: Nutriment
-          Quantity: 8
-        - ReagentId: Vitamin
-          Quantity: 2
-  - type: MeleeWeapon
-    wideAnimationRotation: 0
-    damage:
-      types:
-        Blunt: 2
-    angle: 0
-    animation: WeaponArcThrust
-    soundHit:
-      path: /Audio/Weapons/punch1.ogg
   - type: Item
     sprite: SS220/Objects/Consumable/Food/caramel_rooster.rsi
     inhandVisuals:
       left:
-      - state: inhand-lefty
+      - state: inhand-left-yellow
       right:
-      - state: inhand-righty
+      - state: inhand-right-yellow
+  - type: FlavorProfile
+    flavors:
+    - sweet
+    - bitter
