--- a/Resources/Prototypes/Loadouts/Jobs/Medical/chief_medical_officer.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Medical/chief_medical_officer.yml
@@ -45,6 +45,14 @@
   equipment:
     head: ClothingHeadMirror
 
+- type: loadout
+  id: ChiefMedicalOfficerParadeCap
+  equipment:
+    neck: ClothingHeadHatCapCMO
+  effects:
+  - !type:GroupLoadoutEffect
+    proto: CapCMO
+
 # Neck
 - type: loadout
   id: ChiefMedicalOfficerCloak
@@ -63,6 +71,14 @@
   id: ChiefMedicalOfficerMantle
   equipment:
     neck: ClothingNeckMantleCMO
+
+- type: loadout
+  id: ChiefMedicalOfficerParadeCloak
+  equipment:
+    neck: ClothingNeckCMOParadeCloak
+  effects:
+  - !type:GroupLoadoutEffect
+    proto: ParadeCloakCMO
 
 # Outer clothing
 - type: loadout
