--- a/Resources/Prototypes/SS220/Loadouts/Jobs/Medical/chief_medical_officer.yml
+++ b/Resources/Prototypes/SS220/Loadouts/Jobs/Medical/chief_medical_officer.yml
@@ -46,3 +46,33 @@
     proto: CMOCorporate
   equipment:
     shoes: ClothingShoesCMOCorporate
+
+# Head 
+- type: loadoutEffectGroup
+  id: CapCMO
+  effects:
+  - !type:JobRequirementLoadoutEffect
+    requirement:
+      !type:RoleTimeRequirement
+      role: JobChiefMedicalOfficer
+      time: 234000 # 65 hrs
+  sponsorTierLoadoutEffects:
+  - !type:GroupLoadoutEffect
+    proto: SeniorDevTeamTier
+  - !type:GroupLoadoutEffect
+    proto: AdministratorSponsorTier
+
+# Neck 
+- type: loadoutEffectGroup
+  id: ParadeCloakCMO
+  effects:
+  - !type:JobRequirementLoadoutEffect
+    requirement:
+      !type:RoleTimeRequirement
+      role: JobChiefMedicalOfficer
+      time: 234000 # 65 hrs
+  sponsorTierLoadoutEffects:
+  - !type:GroupLoadoutEffect
+    proto: SeniorDevTeamTier
+  - !type:GroupLoadoutEffect
+    proto: AdministratorSponsorTier
