--- a/Resources/Prototypes/SS220/Entities/Clothing/Neck/mantles.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Neck/mantles.yml
@@ -32,3 +32,21 @@
     sprite: SS220/Clothing/Neck/Cloaks/captain_white_mantle.rsi
   - type: Clothing
     sprite: SS220/Clothing/Neck/Cloaks/captain_white_mantle.rsi
+
+- type: entity
+  parent: ClothingNeckBase
+  id: ClothingNeckCMOParadeCloak
+  name: chief medical officer's parade cloak
+  description: The owner has seen everything and more. From the dwarf under the bahus to the smoking chemist in the lab. 
+  suffix: For playtime
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Neck/Cloaks/cmo_parade_cloak.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Neck/Cloaks/cmo_parade_cloak.rsi
+
+- type: entity
+  parent: [ClothingNeckBaseFlippedAlt, ClothingNeckCMOParadeCloak]
+  suffix: Flipped
+  id: ClothingNeckCMOParadeCloakFlipped
+  name: chief medical officer's parade cloak
