--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -1389,7 +1389,7 @@
   loadouts:
   - ChiefMedicalOfficerBeret
   - CMOMedicalHeadMirror
-  - CapCMO #SS220-CMOParade
+  - ClothingHeadHatCapCMO #SS220-CMOParade
 
 - type: loadoutGroup
   id: ChiefMedicalOfficerJumpsuit
@@ -1418,7 +1418,7 @@
   loadouts:
   - ChiefMedicalOfficerCloak
   - ChiefMedicalOfficerMantle
-  - ParadeCloakCMO #SS220-CMOParade
+  - ClothingNeckCMOParadeCloak #SS220-CMOParade
 
 - type: loadoutGroup
   id: ChiefMedicalOfficerShoes
