fixup! ADD: Sprites for judge_gavel

--- a/Resources/Prototypes/SS220/Entities/Objects/Weapons/Melee/judge_gavel.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Weapons/Melee/judge_gavel.yml
@@ -32,7 +32,7 @@
   components:
   - type: Sprite
     sprite: SS220/Objects/Weapons/Melee/judge_gavel.rsi
-    state: gavel_stand
+    state: gavel-stand
     drawdepth: SmallObjects
     noRot: true
   - type: Appearance
