--- a/Resources/Prototypes/SS220/Loadouts/Jobs/Medical/chief_medical_officer.yml
+++ b/Resources/Prototypes/SS220/Loadouts/Jobs/Medical/chief_medical_officer.yml
@@ -69,7 +69,7 @@
   - !type:GroupLoadoutEffect
     proto: CMOParade
   equipment:
-    head: ChiefMedicalOfficerParadeCap
+    head: ClothingHeadHatCapCMO
 
 # Neck 
 - type: loadout
