--- a/Resources/Prototypes/SS220/Entities/Clothing/Neck/mantles.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Neck/mantles.yml
@@ -44,9 +44,11 @@
     sprite: SS220/Clothing/Neck/Cloaks/cmo_parade_cloak.rsi
   - type: Clothing
     sprite: SS220/Clothing/Neck/Cloaks/cmo_parade_cloak.rsi
+  - type: Foldable
+    canFoldInsideContainer: true
+    unfoldVerbText: fold-flip-verb
+    foldVerbText: fold-flip-verb
+  - type: FoldableClothing
+    foldedEquippedPrefix: flipped
+    foldedHeldPrefix: flipped
 
-- type: entity
-  parent: [ClothingNeckBaseFlippedAlt, ClothingNeckCMOParadeCloak]
-  suffix: Flipped
-  id: ClothingNeckCMOParadeCloakFlipped
-  name: chief medical officer's parade cloak
