Added GavelStand to LockerFillMagistrate table

--- a/Resources/Prototypes/SS220/Catalog/Fills/Lockers/law.yml
+++ b/Resources/Prototypes/SS220/Catalog/Fills/Lockers/law.yml
@@ -15,6 +15,7 @@
     - id: BoxEncryptionKeyLaw
     - id: BoxTapeRecorder
     - id: JudgeGavel
+    - id: GavelStand
 
 - type: entity
   id: LockerMagistrateFilled
