--- a/Resources/Prototypes/Entities/Clothing/Head/eva-helmets.yml
+++ b/Resources/Prototypes/Entities/Clothing/Head/eva-helmets.yml
@@ -71,7 +71,7 @@
   categories: [ HideSpawnMenu ]
   components:
   - type: Sprite
-    sprite: Clothing/Head/Hardsuits/paramedhelm.rsi
+    sprite: SS220/Clothing/Head/Hardsuits/paramed.rsi #ss220 paramedic softsuit resprite
   - type: HandheldLight
     addPrefix: false
   - type: ToggleableLightVisuals
