--- a/Resources/Prototypes/SS220/Entities/Clothing/Neck/cloaks.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Neck/cloaks.yml
@@ -73,3 +73,20 @@
   - type: ContainerContainer
     containers:
       toggleable-clothing: !type:ContainerSlot {}
+
+- type: entity
+  parent: ClothingNeckBase
+  id: ClothingNeckCloakOwl
+  name: the owl hero's cloak
+  description:  Be prepared for night patrols and strange questions about mice.
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Neck/Cloaks/owl.rsi
+  - type: ToggleableClothing
+    clothingPrototype: ClothingHeadHatHoodOwl
+    requiredSlot:
+    - neck
+    slot: head
+  - type: ContainerContainer
+    containers:
+      toggleable-clothing: !type:ContainerSlot {}
