made not fully working dropped events + some tweaks

--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/sedativesting.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/sedativesting.yml
@@ -6,8 +6,8 @@
   id: SedativeStingCultYogg
   suffix: CultYogg
   components:
-  - type: CultYoggWeapon
-    item: CultYoggCocoonSedativeSting
+  #- type: CultYoggWeapon
+  #  item: CultYoggCocoonSedativeSting
   - type: Sprite
     sprite: SS220/Objects/Weapons/Melee/CultYogg/cult_yogg_sedativesting.rsi
     state: icon
@@ -23,6 +23,7 @@
     transferAmount: 10
   - type: StuckOnEquip
     inHandItem: true
+  - type: InnerHandToggleProvider
   - type: Tag
     tags:
     - CultYoggStealthProvidable
