--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/sedativesting.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/sedativesting.yml
@@ -2,7 +2,8 @@
 
 - type: entity
   name: sedative sting
-  parent: [BaseItem, CultYoggRestrictedItem]
+  #parent: [BaseItem, CultYoggRestrictedItem]
+  parent: BaseItem
   id: SedativeStingCultYogg
   suffix: CultYogg
   components:
@@ -22,7 +23,7 @@
   - type: SedativeSting
     transferAmount: 10
   - type: StuckOnEquip
-    inHandItem: true
+  #  inHandItem: true
   - type: InnerHandToggleProvider
   - type: Tag
     tags:
