rework rework rework

--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/duffel.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/duffel.yml
@@ -1,7 +1,8 @@
 # © SS220, An EULA/CLA with a hosting restriction, full text: https://raw.githubusercontent.com/SerbiaStrong-220/space-station-14/master/CLA.txt
 
 - type: entity
-  parent: [ClothingBackpack, CultYoggRestrictedItem]
+  #parent: [ClothingBackpack, CultYoggRestrictedItem]
+  parent: ClothingBackpack #ToDo_SS220 del this after tests
   id: ClothingBackpackDuffelCultYogg
   suffix: CultYogg
   name: cult duffel bag
