--- a/Resources/clientCommandPerms.yml
+++ b/Resources/clientCommandPerms.yml
@@ -79,7 +79,7 @@
     - mapping
     - toggleautosave
     - toggledecals
-    - "zone:control_window" # SS220 Zones
+    - "zones:control_window" # SS220 Zones
 
 - Flags: QUERY
   Commands:
